samples/_failures_safe/1761518385_258e13_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0f80891c.c: In function ‘freeGraph’:
./samples/SAFE/__tmp_0f80891c.c:183:15: error: expected ‘)’ at end of input
  183 |     if (!graph
      |        ~      ^
      |               )
./samples/SAFE/__tmp_0f80891c.c:183:5: error: expected declaration or statement at end of input
  183 |     if (!graph
      |     ^~
